Update 🎪 Fuarlar “fairs_2026”

--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -1,18 +1,18 @@
-cms_button_label: "2027 Fuarları"
-year: 2027
-page_slug: 2027-fuar-takvimi
-page_slug_en: 2027-fair-calendar
+cms_button_label: 2026 Fuarları
+year: 2026
+page_slug: 2026-fuar-takvimi
+page_slug_en: 2026-fair-calendar
 is_active: true
 display_status: Aktif Fuarlar
 menu_order: 1
 page_content:
-  title_tr: 2027 Fuar Takvimi
-  title_en: 2027 Fair Calendar
-  menu_title_tr: 2027 Fuar Takvimi
-  menu_title_en: 2027 Fair Calendar
-  description_tr: 2027 yılında dünya çapında organize edeceğimiz prestijli
+  title_tr: 2026 Fuar Takvimi
+  title_en: 2026 Fair Calendar
+  menu_title_tr: 2026 Fuar Takvimi
+  menu_title_en: 2026 Fair Calendar
+  description_tr: 2026 yılında dünya çapında organize edeceğimiz prestijli
     fuarlarda, Türk firmalarını global pazarlarla buluşturuyoruz.
-  description_en: In 2027, we bring Turkish companies together with global markets
+  description_en: In 2026, we bring Turkish companies together with global markets
     at prestigious fairs we organize worldwide.
 fairs:
   - settings:
