--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -74,7 +74,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
@@ -169,7 +169,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
@@ -292,7 +292,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
@@ -400,7 +400,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
@@ -499,7 +499,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
@@ -598,7 +598,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
@@ -697,7 +697,7 @@ collections:
                   - label: "👤 Ekip Üyesi Seç"
                     name: "team_member"
                     widget: "relation"
-                    collection: "team_members"
+                    collection: "team-members"
                     search_fields: ["name"]
                     value_field: "name"
                     display_fields: ["name", "title.tr"]
