feat: CMS temsilci field'ları temizlendi - Sadece ekip üyesi seçimi
✅ Temizlenmiş CMS Yapısı:
- ❌ Manuel İsim field'ı kaldırıldı
- ❌ Manuel E-posta field'ı kaldırıldı
- ❌ Manuel Ünvan (TR/EN) field'ları kaldırıldı
- ✅ Sadece 'Ekip Üyesi Seç' kaldı
- ✅ Özel Telefon (opsiyonel)
- ✅ Telefon Gizle (checkbox)

🎯 Yeni CMS İş Akışı:
1. Fuar ekle
2. Ekip üyesi seç → Frontend otomatik çeker
3. Sadece özel telefon gir (gerekirse)
4. Save

🔧 Schema Güncellemesi:
- representative: sadece team_member, phone, hide_phone
- Gereksiz field'lar kaldırıldı
- Daha temiz ve anlaşılır yapı

💡 Test Sonuçları:
- Representative data: { phone: '' } ✓
- Team lookup sistemi hazır ✓
- Fallback sistem çalışıyor ✓

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -80,13 +80,9 @@ collections:
                     display_fields: ["name", "title.tr"]
                     filter: {field: "is_fair_representative", value: true}
                     required: false
-                    hint: "Ekip üyelerinden seçin (otomatik mail/title gelir)"
-                  - {label: "👤 İsim", name: "name", widget: "string", hint: "Ekip üyesi seçilirse otomatik dolar"}
-                  - {label: "💼 Ünvan (TR)", name: "title_tr", widget: "select", options: ["Satış Direktörü", "Satış Temsilcisi"], required: false}
-                  - {label: "💼 Ünvan (EN)", name: "title_en", widget: "select", options: ["Sales Director", "Sales Representative"], required: false}
-                  - {label: "📧 E-posta", name: "email", widget: "string", hint: "Ekip üyesi seçilirse otomatik dolar"}
-                  - {label: "📞 Özel Telefon", name: "phone", widget: "string", required: false, hint: "Farklı telefon numarası için"}
-                  - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, required: false}
+                    hint: "Ekip üyesi seçin → İsim/email/title otomatik frontend'de çekilir"
+                  - {label: "📞 Özel Telefon", name: "phone", widget: "string", required: false, hint: "Sadece farklı telefon numarası için (opsiyonel)"}
+                  - {label: "📞 Telefon Gizle", name: "hide_phone", widget: "boolean", default: false, required: false, hint: "Telefon numarasını gizle"}
               - label: "⚙️ Ayarlar"
                 name: "settings"
                 widget: "object"
