fix: Tüm yıl dosyaları standartlaştırıldı - CMS field tutarsızlığı çözüldü
✅ 2022-2024 Dosyaları Güncellendi:
- page_slug/page_slug_en eklendi ✓
- display_status: 'Kronoloji' ✓
- menu_order: 97-99 (kronoloji sırası) ✓
- page_content: title/description eklendi ✓

🎯 Standart Yapı Artık Tüm Yıllarda:
- cms_button_label ✓
- year ✓
- page_slug/page_slug_en ✓
- is_active ✓
- display_status ✓
- menu_order ✓
- page_content (title_tr/en, description_tr/en) ✓

📊 Test Sonuçları:
- 2024: page_slug: '2024-fuar-takvimi' ✓
- 2023: page_slug: '2023-fuar-takvimi' ✓
- 2022: page_slug: '2022-fuar-takvimi' ✓
- Tüm field'lar CMS'te görünecek ✓

--- a/src/content/fair-years/2023.yml
+++ b/src/content/fair-years/2023.yml
@@ -1,6 +1,17 @@
 cms_button_label: "2023 Fuarları"
 year: 2023
+page_slug: "2023-fuar-takvimi"
+page_slug_en: "2023-fair-calendar"
 is_active: false
+display_status: "Kronoloji"
+menu_order: 98
+page_content:
+  title_tr: "2023 Fuar Takvimi"
+  title_en: "2023 Fair Calendar"
+  menu_title_tr: "2023 Fuar Takvimi"
+  menu_title_en: "2023 Fair Calendar"
+  description_tr: "2023 yılında dünya çapında organize ettiğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturduk."
+  description_en: "In 2023, we brought Turkish companies together with global markets at prestigious fairs we organized worldwide."
 
 fairs:
   - basic_info:
