--- a/src/content/fair-years/2022.yml
+++ b/src/content/fair-years/2022.yml
@@ -1,6 +1,17 @@
 cms_button_label: "2022 Fuarları"
 year: 2022
+page_slug: "2022-fuar-takvimi"
+page_slug_en: "2022-fair-calendar"
 is_active: false
+display_status: "Kronoloji"
+menu_order: 99
+page_content:
+  title_tr: "2022 Fuar Takvimi"
+  title_en: "2022 Fair Calendar"
+  menu_title_tr: "2022 Fuar Takvimi"
+  menu_title_en: "2022 Fair Calendar"
+  description_tr: "2022 yılında dünya çapında organize ettiğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturduk."
+  description_en: "In 2022, we brought Turkish companies together with global markets at prestigious fairs we organized worldwide."
 
 fairs:
   - basic_info:
