--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -433,14 +433,23 @@ collections:
         file: "src/content/fair-years/2024.yml"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2024 Fuarları", hint: "CMS'te görünen buton ismi"}
-          - label: "Yıl"
-            name: "year"
-            widget: "number"
-            default: 2024
-          - label: "Aktif"
-            name: "is_active"
-            widget: "boolean"
-            default: true
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2024}
+          - {label: "🔗 Sayfa Slug (TR)", name: "page_slug", widget: "string", default: "2024-fuar-takvimi", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire"]}
+          - {label: "🔗 Sayfa Slug (EN)", name: "page_slug_en", widget: "string", default: "2024-fair-calendar", pattern: ['^[a-z0-9-]+$', "Only lowercase, numbers and dash"]}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: false}
+          - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Kronoloji"}
+          - {label: "🔢 Menü Sırası", name: "menu_order", widget: "number", value_type: "int", default: 97}
+          - label: "📝 Sayfa İçeriği"
+            name: "page_content"
+            widget: "object"
+            collapsed: true
+            fields:
+              - {label: "Sayfa Başlığı (TR)", name: "title_tr", widget: "string", default: "2024 Fuar Takvimi"}
+              - {label: "Sayfa Başlığı (EN)", name: "title_en", widget: "string", default: "2024 Fair Calendar"}
+              - {label: "Menü Başlığı (TR)", name: "menu_title_tr", widget: "string", default: "2024 Fuar Takvimi"}
+              - {label: "Menü Başlığı (EN)", name: "menu_title_en", widget: "string", default: "2024 Fair Calendar"}
+              - {label: "Açıklama (TR)", name: "description_tr", widget: "text", default: "2024 yılında dünya çapında organize ettiğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturduk."}
+              - {label: "Açıklama (EN)", name: "description_en", widget: "text", default: "In 2024, we brought Turkish companies together with global markets at prestigious fairs we organized worldwide."}
           - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
@@ -532,14 +541,23 @@ collections:
         file: "src/content/fair-years/2023.yml"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2023 Fuarları", hint: "CMS'te görünen buton ismi"}
-          - label: "Yıl"
-            name: "year"
-            widget: "number"
-            default: 2023
-          - label: "Aktif"
-            name: "is_active"
-            widget: "boolean"
-            default: true
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2023}
+          - {label: "🔗 Sayfa Slug (TR)", name: "page_slug", widget: "string", default: "2023-fuar-takvimi", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire"]}
+          - {label: "🔗 Sayfa Slug (EN)", name: "page_slug_en", widget: "string", default: "2023-fair-calendar", pattern: ['^[a-z0-9-]+$', "Only lowercase, numbers and dash"]}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: false}
+          - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Kronoloji"}
+          - {label: "🔢 Menü Sırası", name: "menu_order", widget: "number", value_type: "int", default: 98}
+          - label: "📝 Sayfa İçeriği"
+            name: "page_content"
+            widget: "object"
+            collapsed: true
+            fields:
+              - {label: "Sayfa Başlığı (TR)", name: "title_tr", widget: "string", default: "2023 Fuar Takvimi"}
+              - {label: "Sayfa Başlığı (EN)", name: "title_en", widget: "string", default: "2023 Fair Calendar"}
+              - {label: "Menü Başlığı (TR)", name: "menu_title_tr", widget: "string", default: "2023 Fuar Takvimi"}
+              - {label: "Menü Başlığı (EN)", name: "menu_title_en", widget: "string", default: "2023 Fair Calendar"}
+              - {label: "Açıklama (TR)", name: "description_tr", widget: "text", default: "2023 yılında dünya çapında organize ettiğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturduk."}
+              - {label: "Açıklama (EN)", name: "description_en", widget: "text", default: "In 2023, we brought Turkish companies together with global markets at prestigious fairs we organized worldwide."}
           - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
@@ -631,14 +649,23 @@ collections:
         file: "src/content/fair-years/2022.yml"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2022 Fuarları", hint: "CMS'te görünen buton ismi"}
-          - label: "Yıl"
-            name: "year"
-            widget: "number"
-            default: 2022
-          - label: "Aktif"
-            name: "is_active"
-            widget: "boolean"
-            default: true
+          - {label: "📅 Yıl", name: "year", widget: "number", default: 2022}
+          - {label: "🔗 Sayfa Slug (TR)", name: "page_slug", widget: "string", default: "2022-fuar-takvimi", pattern: ['^[a-z0-9-]+$', "Sadece küçük harf, rakam ve tire"]}
+          - {label: "🔗 Sayfa Slug (EN)", name: "page_slug_en", widget: "string", default: "2022-fair-calendar", pattern: ['^[a-z0-9-]+$', "Only lowercase, numbers and dash"]}
+          - {label: "✅ Aktif", name: "is_active", widget: "boolean", default: false}
+          - {label: "📊 Görüntüleme Durumu", name: "display_status", widget: "select", options: ["Aktif Fuarlar", "Kronoloji"], default: "Kronoloji"}
+          - {label: "🔢 Menü Sırası", name: "menu_order", widget: "number", value_type: "int", default: 99}
+          - label: "📝 Sayfa İçeriği"
+            name: "page_content"
+            widget: "object"
+            collapsed: true
+            fields:
+              - {label: "Sayfa Başlığı (TR)", name: "title_tr", widget: "string", default: "2022 Fuar Takvimi"}
+              - {label: "Sayfa Başlığı (EN)", name: "title_en", widget: "string", default: "2022 Fair Calendar"}
+              - {label: "Menü Başlığı (TR)", name: "menu_title_tr", widget: "string", default: "2022 Fuar Takvimi"}
+              - {label: "Menü Başlığı (EN)", name: "menu_title_en", widget: "string", default: "2022 Fair Calendar"}
+              - {label: "Açıklama (TR)", name: "description_tr", widget: "text", default: "2022 yılında dünya çapında organize ettiğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturduk."}
+              - {label: "Açıklama (EN)", name: "description_en", widget: "text", default: "In 2022, we brought Turkish companies together with global markets at prestigious fairs we organized worldwide."}
           - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
