--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,9 +16,10 @@ collections:
   - name: "fair_years"
     label: "🎪 Fuarlar"
     files:
-      - label: "📅 Fuar Yılı (2028)"
+      - label: "{{cms_button_label}}"
         name: "fairs_2028"
         file: "src/content/fair-years/2028.yml"
+        summary: "{{cms_button_label}} ({{year}} - {{fairs.length}} fuar)"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2028 Fuarları", hint: "Bu isim sidebar'da gözükecek - değiştirebilirsiniz"}
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2028}
@@ -212,9 +213,10 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
 
-      - label: "📅 Fuar Yılı (2026)"
+      - label: "{{cms_button_label}}"
         name: "fairs_2026"
         file: "src/content/fair-years/2026.yml"
+        summary: "{{cms_button_label}} ({{year}} - {{fairs.length}} fuar)"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2026 Fuarları", hint: "Bu isim sidebar'da gözükecek - değiştirebilirsiniz"}
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2026}
@@ -320,9 +322,10 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "📅 Fuar Yılı (2025)"
+      - label: "{{cms_button_label}}"
         name: "fairs_2025"
         file: "src/content/fair-years/2025.yml"
+        summary: "{{cms_button_label}} ({{year}} - {{fairs.length}} fuar)"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2025 Fuarları", hint: "Bu isim sidebar'da gözükecek - değiştirebilirsiniz"}
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2025}
@@ -428,9 +431,10 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "📅 Fuar Yılı (2024)"
+      - label: "{{cms_button_label}}"
         name: "fairs_2024"
         file: "src/content/fair-years/2024.yml"
+        summary: "{{cms_button_label}} ({{year}} - {{fairs.length}} fuar)"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2024 Fuarları", hint: "Bu isim sidebar'da gözükecek - değiştirebilirsiniz"}
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2024}
@@ -536,9 +540,10 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "📅 Fuar Yılı (2023)"
+      - label: "{{cms_button_label}}"
         name: "fairs_2023"
         file: "src/content/fair-years/2023.yml"
+        summary: "{{cms_button_label}} ({{year}} - {{fairs.length}} fuar)"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2023 Fuarları", hint: "Bu isim sidebar'da gözükecek - değiştirebilirsiniz"}
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2023}
@@ -644,9 +649,10 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "📅 Fuar Yılı (2022)"
+      - label: "{{cms_button_label}}"
         name: "fairs_2022"
         file: "src/content/fair-years/2022.yml"
+        summary: "{{cms_button_label}} ({{year}} - {{fairs.length}} fuar)"
         fields:
           - {label: "🏷️ CMS Buton Adı", name: "cms_button_label", widget: "string", default: "2022 Fuarları", hint: "Bu isim sidebar'da gözükecek - değiştirebilirsiniz"}
           - {label: "📅 Yıl", name: "year", widget: "number", default: 2022}
