--- a/src/content/fair-years/2028.yml
+++ b/src/content/fair-years/2028.yml
@@ -1,4 +1,4 @@
-cms_button_label: 2052 Fuarları
+cms_button_label: Edit 1 Fuarları
 year: 2052
 page_slug: 2052-fuar-takvimi
 page_slug_en: 2052-fair-calendar
