identifier_field sistem

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -15,8 +15,9 @@ collections:
   # FUARLAR - Yıl Bazlı Yönetim
   - name: "fair_years"
     label: "🎪 Fuarlar"
+    identifier_field: "cms_button_label"
     files:
-      - label: "2028 Fuarları"
+      - label: "Fuar Yılı"
         name: "fairs_2028"
         file: "src/content/fair-years/2028.yml"
         fields:
@@ -212,7 +213,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
 
-      - label: "2026 Fuarları"
+      - label: "Fuar Yılı"
         name: "fairs_2026"
         file: "src/content/fair-years/2026.yml"
         fields:
@@ -320,7 +321,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2025 Fuarları"
+      - label: "Fuar Yılı"
         name: "fairs_2025"
         file: "src/content/fair-years/2025.yml"
         fields:
@@ -428,7 +429,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2024 Fuarları"
+      - label: "Fuar Yılı"
         name: "fairs_2024"
         file: "src/content/fair-years/2024.yml"
         fields:
@@ -536,7 +537,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2023 Fuarları"
+      - label: "Fuar Yılı"
         name: "fairs_2023"
         file: "src/content/fair-years/2023.yml"
         fields:
@@ -644,7 +645,7 @@ collections:
                     field: {label: "Görsel", name: "image", widget: "image"}
                     hint: "📐 İdeal Ölçü: 400x400px | Format: JPG/PNG | Kare kompozisyon önerilir"
       
-      - label: "2022 Fuarları"
+      - label: "Fuar Yılı"
         name: "fairs_2022"
         file: "src/content/fair-years/2022.yml"
         fields:
