--- a/src/content/fair-years/2024.yml
+++ b/src/content/fair-years/2024.yml
@@ -1,43 +1,43 @@
-cms_button_label: "2024 Fuarları"
+cms_button_label: 2024 Fuarları
 year: 2024
-page_slug: "2024-fuar-takvimi"
-page_slug_en: "2024-fair-calendar"
-is_active: false
-display_status: "Kronoloji"
+page_slug: 2024-fuar-takvimi
+page_slug_en: 2024-fair-calendar
+is_active: true
+display_status: Kronoloji
 menu_order: 97
 page_content:
-  title_tr: "2024 Fuar Takvimi"
-  title_en: "2024 Fair Calendar"
-  menu_title_tr: "2024 Fuar Takvimi"
-  menu_title_en: "2024 Fair Calendar"
-  description_tr: "2024 yılında dünya çapında organize ettiğimiz prestijli fuarlarda, Türk firmalarını global pazarlarla buluşturduk."
-  description_en: "In 2024, we brought Turkish companies together with global markets at prestigious fairs we organized worldwide."
-
+  title_tr: 2024 Fuar Takvimi
+  title_en: 2024 Fair Calendar
+  menu_title_tr: 2024 Fuar Takvimi
+  menu_title_en: 2024 Fair Calendar
+  description_tr: 2024 yılında dünya çapında organize ettiğimiz prestijli
+    fuarlarda, Türk firmalarını global pazarlarla buluşturduk.
+  description_en: In 2024, we brought Turkish companies together with global
+    markets at prestigious fairs we organized worldwide.
 fairs:
   - basic_info:
-      name_tr: "LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı"
-      name_en: "LeShow Moscow - International Fashion and Textile Industry Fair"
-      date: "15-18 Mart 2024"
-      location_tr: "Moskova, Rusya"
-      location_en: "Moscow, Russia"
-      sector: "Moda ve Tekstil"
+      name_tr: LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı
+      name_en: LeShow Moscow - International Fashion and Textile Industry Fair
+      date: 15-18 Mart 2024
+      location_tr: Moskova, Rusya
+      location_en: Moscow, Russia
+      sector: Moda ve Tekstil
     visuals:
-      logo: "/images/fuarlar-logo.png"
-      background_image: "/images/fuarlar-arkaplan.jpg"
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
     settings:
       show_in_slider: false
       show_in_forms: false
-  
   - basic_info:
-      name_tr: "Fashion Week İstanbul Premium Tekstil ve Moda Endüstrisi Fuarı"
-      name_en: "Fashion Week Istanbul Premium Textile and Fashion Industry Fair"
-      date: "20-23 Haziran 2024"
-      location_tr: "İstanbul, Türkiye"
-      location_en: "Istanbul, Turkey"
-      sector: "Moda ve Tekstil"
+      name_tr: Fashion Week İstanbul Premium Tekstil ve Moda Endüstrisi Fuarı
+      name_en: Fashion Week Istanbul Premium Textile and Fashion Industry Fair
+      date: 20-23 Haziran 2024
+      location_tr: İstanbul, Türkiye
+      location_en: Istanbul, Turkey
+      sector: Moda ve Tekstil
     visuals:
-      logo: "/images/fuarlar-logo.png"
-      background_image: "/images/fuarlar-arkaplan.jpg"
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
     settings:
       show_in_slider: false
       show_in_forms: false
